2005-06-28 Magnus Hagdorn
 * glimmer.bib: added bibtex database
 * glimmer.tex: use bibtex
 * num.tex: ditto
 * definitions.tex: ditto
 * packages.tex: ditto
 * grid.tex, kinematics.tex: add some references
 * configure.in, Makefile.am: hook up bibtex

2005-06-24 Magnus Hagdorn
 * configure.in: added detection of Intel and gcc f95 compiler

2005-06-24 Magnus Hagdorn
 * configure.in: detect which f95 compiler is used and set some flags
   accordingly
 * INSTALL: also mention SUN f95 compiler

2005-06-15 Ian Rutt
 * Corrected documentation error in annual pdd scheme

2005-06-08 Magnus Hagdorn
 * glide_thck.f90: fixed bug #132, extreme velos.

2005-05-18 Ian Rutt
 * Bug-fix changes to couple to Energy-balance mass-balance model
 * Added instantaneous outputting of mass-balance coupling fields,
   enables checking of output from mass-balance schemes
 * Fixed problem with precision change in output from Energy balance
   mass-balance scheme

2005-05-17 Magnus Hagdorn
 * glide_types.f90: added variable basal heat flux
 * glide_vars.def: ditto
 * glide_temp.f90: replaced scalar geothermal heat flux with variable
   basal heat flux
 * glide.f90: initialise variable basal heat flux with scalar geothermal 
   heat flux

2005-05-17 Ian Rutt
 * Added test example for energy-balance mass-balance scheme
 * Changed mass-balance schemes to only calculate 'land' points (i.e. mask
 is passed though) - hopefully might speed things up.
 * Removed unnecessary log line in glex_ebm_clim.f90 - we do need to convert temperature

2005-05-16 Ian Rutt
 * Removed dummy code glimmer_enmabal.f90
 * Merged in changes to allow use of RAPID energy-balance mass-balance
 model (not released yet). These are activated using the --with-enmabal
 flag in configure. 

2005-05-13 Magnus Hagdorn
 * glide_velo.f90: simplify API of calcbtrc, add sliding param depending on basal melt;
   simplify API of slipvelo
 * glide_thck.f90: hook-up new slipvelo